# asciipen

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CONVENTIONS.md  Makefile  README.md  common_defs.cmake
.github/workflows/: ci.yml
data/: Info.plist  asciipen.desktop  windows.rc
data/tilesets/: Amstard_CPC.tar  Commodore_64.ini  Commodore_64.tar
src/: main.cpp  main.hpp  types.cpp  types.hpp
src/app/: app.hpp  app_impl_opengl.cpp
src/doc/: doc.cpp  doc.hpp  tilemap.cpp  tilemap.hpp  tileset.cpp  tileset.hpp
src/editor/: document.cpp  document.hpp
src/pixel/: pixel.hpp
src/renderer/: canvas.hpp  texture.cpp  texture.hpp
src/tileset/: tilemap.cpp  tilemap.hpp  tileset.cpp  tileset.hpp
src/tools/: Manager.cpp  Manager.hpp  Tool.cpp  Tool.hpp  ToolManager.cpp  ToolManager.hpp
